--- a/correos_full_prb.html
+++ b/correos_full_prb.html
@@ -79,7 +79,7 @@
     <nav class="tabs is-boxed is-fullwidth">
       <div class="container">
         <ul>
-          <li><a href="impersa_home.html">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li><a>Galeria</a></li>
           <li><a>Facebook</a></li>
         </ul>
